fixed capital raised rect onhover text bug, added svg overflow visible and display block to reset.scss

--- a/app/assets/javascripts/bundle.scss
+++ b/app/assets/javascripts/bundle.scss
@@ -512,8 +512,6 @@
       width: 30px; }
       .toggle-view-options .toggle-option .toggle-icon #active {
         transform: rotate(90deg); }
-      .toggle-view-options .toggle-option .toggle-icon svg {
-        display: block; }
     .toggle-view-options .toggle-option .toggle-button {
       cursor: pointer;
       width: 18px;
@@ -605,8 +603,6 @@
 
 .token-graph {
   text-align: center; }
-  .token-graph svg {
-    overflow: visible !important; }
 
 .token-svg {
   width: 75%;
@@ -644,8 +640,7 @@
     fill: #61aba9; }
   .token-svg .earnings-rect {
     position: absolute;
-    right: -1.5%;
-    overflow: visible !important; }
+    right: -1.5%; }
 
 .token-graph-overlay .token-graph-overlay-rect {
   fill: none;
@@ -673,8 +668,7 @@
   text-align: center; }
   .price-graph .token-svg {
     width: 90%;
-    height: 90%;
-    overflow: visible !important; }
+    height: 90%; }
   .price-graph .x .domain {
     stroke: none; }
   .price-graph .x .tick line {
@@ -793,7 +787,6 @@
     position: absolute;
     width: 100%; }
   .votes-graph .votes-view-svg {
-    overflow: visible !important;
     width: 100%; }
   .votes-graph line {
     stroke: #fff;
