--- a/frontend/components/entities/dashboard/dashboard_toggle_options/toggle_options.scss
+++ b/frontend/components/entities/dashboard/dashboard_toggle_options/toggle_options.scss
@@ -18,10 +18,6 @@
       #active {
         transform: rotate(90deg);
       }
-
-      svg {
-        display: block;
-      }
     }
 
     .toggle-button {
