--- a/frontend/components/entities/dashboard/token_dashboard/price_view/price_graph.scss
+++ b/frontend/components/entities/dashboard/token_dashboard/price_view/price_graph.scss
@@ -6,7 +6,6 @@
   .token-svg {
     width: 90%;
     height: 90%;
-    overflow: visible !important;
   }
   
   // x axis
