--- a/frontend/components/entities/dashboard/token_dashboard/token_view/token_graph.scss
+++ b/frontend/components/entities/dashboard/token_dashboard/token_view/token_graph.scss
@@ -2,10 +2,6 @@
 
 .token-graph {
   text-align: center;
-
-  svg {
-    overflow: visible !important;
-  }
 }
 
 .token-svg {
@@ -74,7 +70,6 @@
   .earnings-rect {
     position: absolute;
     right: -1.5%;
-    overflow: visible !important;
   }
 
 }
